# makexx

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE.md.tmp.19511.df3ccb460dce  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  THIRD_PARTY_LICENSES.md  build.sh  install.sh  makefile.cpp
.github/workflows/: ci.yml  release.yml
assets/: graph_viewer.html
build2/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  makexx  makexxfile_embed.hpp  starter_embed.hpp  test_dsl
build2/Testing/Temporary/: CTestCostData.txt
cmake/: embed_as_string.cmake
examples/compile/: makefile.cpp
examples/family_tree/: makefile.cpp
examples/portfolio_analytics/: config.hpp  makefile.cpp
examples/processing_workflow/: makefile.cpp
examples/simulation/: config.hpp  makefile.cpp
include/: makexxfile.hpp  makexxfile.hpp.tmp.11499.0507425a3278  makexxfile.hpp.tmp.11499.a56f96bb3c91
packaging/homebrew/: makexx.rb
paper/: blog_post.md  paper.bib  paper.md
src/: makexx.cpp  makexx.cpp.tmp.19511.3b377e4a5946  starter.cpp
tests/: test_dsl.cpp
